terraform/main.tf
provider "aws" {
  region = "us-east-1"
}

terraform {
  backend "s3" {
    bucket = "codabool-tf"
    key    = "p08/terraform.tfstate" # bucket dir
    region = "us-east-1"
  }
}

# Default Network Resources
# Works different than normal resources
# adopts the default vpc/subnet for tf to reference
# will not create/destroy despite what the cli suggests
resource "aws_default_vpc" "default" {}

resource "aws_default_subnet" "east_1a" {
  availability_zone = "us-east-1a"
}

resource "aws_default_subnet" "east_1b" {
  availability_zone = "us-east-1b"
}

# load balancer
resource "aws_lb" "typer" {
  name               = "typer"
  load_balancer_type = "application"
  security_groups    = [aws_security_group.typer.id]
  subnets            = [aws_default_subnet.east_1a.id, aws_default_subnet.east_1b.id]
}

# load balancer target group
resource "aws_lb_target_group" "typer" {
  name        = "typer"
  port        = 80
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = aws_default_vpc.default.id
  stickiness { type = "lb_cookie" }
}

# load balancer incoming port and action
resource "aws_lb_listener" "typer" {
  load_balancer_arn = aws_lb.typer.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.typer.arn
  }
}

# cluster
resource "aws_ecs_cluster" "typer" {
  name = "typer"
}

# task definition
resource "aws_ecs_task_definition" "typer" {
  family                   = "typer"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  # only need a role if wanting to debug (logs and exec in to container)
  # task_role_arn            = "arn:aws:iam::${var.account_id}:role/${var.role_name}"
  cpu                      = 256 # 256 minimum
  memory                   = 512 # 512 minimum (MiB)
  container_definitions    = <<DEFINITION
    [{
      "name": "typer",
      "image": "${var.ecr_uri}",
      "memoryReservation": 128,
      "portMappings": [{
        "containerPort": 3000
      }],
      "environment": ${jsonencode([{"name": "MONGO_URI", "value": "${var.mongo_uri}"}])}
    }
  ]
  DEFINITION
}

# security group
resource "aws_security_group" "typer" {
  name        = "typer"
  description = "Allow HTTP and app 3000"
  vpc_id      = aws_default_vpc.default.id
  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# service
resource "aws_ecs_service" "typer" {
  name            = "typer"
  cluster         = aws_ecs_cluster.typer.id
  task_definition = aws_ecs_task_definition.typer.arn
  launch_type     = "FARGATE"
  desired_count   = 1
  load_balancer {
    target_group_arn = aws_lb_target_group.typer.arn
    container_name   = "typer"
    container_port   = 3000
  }
  network_configuration {
    assign_public_ip = true
    security_groups  = [aws_security_group.typer.id]
    subnets          = [aws_default_subnet.east_1a.id, aws_default_subnet.east_1b.id]
  }
}
